<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/menu_sort"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_sort_by_size">
        <menu>
            <item android:id="@+id/sort_time" android:title="@string/sort_time" />
            <item android:id="@+id/sort_rating" android:title="@string/sort_rating" />
            <item android:id="@+id/sort_status" android:title="@string/sort_status" />
        </menu>
    </item>

    <item
        android:title="@string/menu_filter"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_view">
        <menu>
            <item android:id="@+id/filter_all" android:title="@string/filter_all" />
            <item android:id="@+id/filter_todo" android:title="@string/filter_todo" />
            <item android:id="@+id/filter_reading" android:title="@string/filter_reading" />
            <item android:id="@+id/filter_read" android:title="@string/filter_read" />
        </menu>
    </item>
</menu>